fix alignment

--- a/src/styles/elements/panels.scss
+++ b/src/styles/elements/panels.scss
@@ -37,7 +37,7 @@
 .tool-params-panel {
     .tool-params {
         display: flex;
-        align-self: center;
+        align-items: center;
         gap: var(--unit-1);
 
         .tool-size-range {
